WINDUP-1030 Victims addon - update test