@@ -126,10 +126,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.19.1</version>
                 <configuration>
-                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=768m -XX:ReservedCodeCacheSize=128m</argLine>
+                    <argLine>-Xms512m -Xmx2048m -XX:ReservedCodeCacheSize=128m</argLine>
                     <reuseForks>false</reuseForks>
+                    <runOrder>alphabetical</runOrder>
                 </configuration>
             </plugin>
 
